--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,5 +5,5 @@ commands = [
   "pip install -r requirements.txt"
 ]
 
-[phases.start]
-commands = ["gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"]
+[start]
+cmd = "gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
