--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,12 @@
+[build]
+builder = "nixpacks"
+
 [phases.setup]
 commands = [
-  "python -m venv --copies /opt/venv",
-  ". /opt/venv/bin/activate",
-  "pip install -r requirements.txt"
+  "python -m venv /opt/venv",
+  "/opt/venv/bin/pip install --upgrade pip",
+  "/opt/venv/bin/pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
+cmd = "/opt/venv/bin/gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
