--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,7 +1,6 @@
 [phases.setup]
-nixpkgs = ["python3", "gcc", "pkg-config", "openssl", "zlib"]
+nixpkgs = ["python3", "gcc", "mysql", "libmysqlclient", "pkg-config", "openssl", "zlib"]
 commands = [
-  "python -m venv /opt/venv",
   "/opt/venv/bin/pip install --upgrade pip",
   "/opt/venv/bin/pip install -r requirements.txt"
 ]
