--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,8 @@
 [phases.setup]
-nixpkgs = ["python3", "gcc", "mysql", "libmysqlclient", "pkg-config", "openssl", "zlib"]
 commands = [
-  "/opt/venv/bin/pip install --upgrade pip",
-  "/opt/venv/bin/pip install -r requirements.txt"
+  "pip install --upgrade pip",
+  "pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "/opt/venv/bin/gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
+cmd = "gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
