--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
 commands = [
-  "pip install --upgrade pip",
-  "pip install -r requirements.txt"
+  "/opt/venv/bin/pip install --upgrade pip",
+  "/opt/venv/bin/pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
+cmd = "/opt/venv/bin/gunicorn flanelinha.wsgi --bind 0.0.0.0:8000"
