--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,4 +1,5 @@
 [phases.setup]
+nixpkgs = ["python3", "gcc", "mysql", "libmysqlclient", "pkg-config", "openssl", "zlib"]
 commands = [
   "/opt/venv/bin/pip install --upgrade pip",
   "/opt/venv/bin/pip install -r requirements.txt"
